# gsettings-qt

./: AUTHORS  CMakeLists.txt  ChangeLog
GSettings/: CMakeLists.txt  gsettings-qml.cpp  plugin.cpp  plugin.h
debian/: changelog  control  copyright  libgsettings-qt-dev.install  libgsettings-qt1.symbols  libgsettings-qt6-1.install  libgsettings-qt6-dev.install  qml6-module-gsettings.install  rules  watch
debian/patches/: 0004_Increase-test-timeout.patch  series
debian/upstream/: metadata
examples/: choices.qml
src/: CMakeLists.txt  gsettings-qt.pc.in  qconftypes.cpp  qconftypes.h
tests/: CMakeLists.txt  com.ubports.gsettings.test.gschema.xml  cpptest.cpp  cpptest.pro  tests.pro  tst_GSettings.qml
